@@ -1,3 +1,7 @@
+- 2003-10-13	leo
+	* report error location inside macros too
+	* allow macro defintions outsied of subs
+
 - 2003-09-29	leo
 
 	* new .nci_call directive
